[metadata]
name = caching-secrets-manager-backend
version = attr:caching_secrets_manager_backend.__version__
descripton = An Airflow custom secrets backend for Google SecretsManager secrets.
author = Lukas Rieder

[options]
packages = caching_secrets_manager_backend
# TODO: Upgrade once Airflow provicers package upgraded.
#       apache-airflow-providers-google 7.0.0 limits to <2.0.0 :(
#
#       Fuck Airflow.
#
#       See also: https://cloud.google.com/python/docs/reference/secretmanager/latest/upgrading
install_requires = google-cloud-secret-manager <2.0.0

